--- a/lhie1.conf
+++ b/lhie1.conf
@@ -8,7 +8,6 @@ collapse-policy-group-items = true
 enhanced-mode-by-rule = true
 exclude-simple-hostnames = true
 hide-crashlytics-request = true
-ipv6 = true
 replica = false
 internet-test-url = http://www.qualcomm.cn/generate_204
 proxy-test-url = http://www.qualcomm.cn/generate_204
@@ -23,7 +22,7 @@ proxy-test-url = http://www.qualcomm.cn/generate_204
 🇭🇰中国深圳 -> 香港 4 | IPLC = ss, 120.79.75.225, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
 🇭🇰中国深圳 -> 香港 5 | IPLC = ss, 39.108.191.24, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
 🇲🇴澳门CTM 2 = ss, ctm2.0tk8a3a1q4t94dler.com, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
-🇲🇴杭州澳门 1 = ss, 47.99.140.189, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
+🇲🇴深圳澳门 3 = ss, 47.99.140.189, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
 🇰🇷上海韩国 2 = ss, 47.100.193.49, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
 🇲🇴上海澳门 3 = ss, 40.73.112.74, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
 🇰🇷韩国SK 1 = ss, 27.102.106.135, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
@@ -58,7 +57,8 @@ proxy-test-url = http://www.qualcomm.cn/generate_204
 
 [Proxy Group]
 Proxy = select, 日本软银-1, 🇲🇴杭州澳门 1, 🇰🇷上海韩国 2, 🇲🇴上海澳门 3, 🇰🇷韩国SK 1, 🇯🇵上海日本IPLC 1
-ForeignMedia = select, 日本软银-1, 🇰🇷韩国SK 1
+油管 = select, 日本软银-1, 🇰🇷韩国SK 1
+tw = select, 日本软银-1
 game = select, DIRECT
 # 去广告以及隐私追踪保
 Advertising = select,REJECT
@@ -101,8 +101,20 @@ RULE-SET,https://raw.githubusercontent.com/ConnersHua/Profiles/master/Surge/Rule
 
 
 # ForeignMedia 媒体应用
-RULE-SET,https://raw.githubusercontent.com/ConnersHua/Profiles/master/Surge/Ruleset/ForeignMedia.list,ForeignMedia
+# > Youtube
+USER-AGENT,com.google.ios.youtube*,油管
+USER-AGENT,YouTube*,油管
+USER-AGENT,YouTubeMusic*,油管
+DOMAIN-SUFFIX,googlevideo.com,油管
+DOMAIN-SUFFIX,youtube.com,油管
+DOMAIN,youtubei.googleapis.com,油管
 
+# > (TW)
+# > Bahamut
+USER-AGENT,Anime*,tw
+DOMAIN-SUFFIX,bahamut.com.tw,tw
+DOMAIN-SUFFIX,gamer.com.tw,tw
+DOMAIN-SUFFIX,hinet.net,tw
 
 # Global 全球加速规则
 RULE-SET,https://raw.githubusercontent.com/ConnersHua/Profiles/master/Surge/Ruleset/Global.list,Proxy
