--- a/lhie1.conf
+++ b/lhie1.conf
@@ -24,14 +24,14 @@ proxy-test-url = http://www.qualcomm.cn/generate_204
 🇲🇴澳门CTM 2 = ss, ctm2.0tk8a3a1q4t94dler.com, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
 🇲🇴深圳澳门 3 = ss, 47.99.140.189, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
 🇰🇷上海韩国 2 = ss, 47.100.193.49, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
-🇲🇴上海澳门 3 = ss, 40.73.112.74, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
+🇲🇴上海澳门 4 = ss, 120.77.207.169, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
 🇰🇷韩国SK 1 = ss, 27.102.106.135, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
 🇰🇷韩国SK 2 = ss, 27.102.118.46, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
 🇨🇳台湾 - CHT 1 = ss, 61.219.127.215, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
 🇨🇳台湾 - CHT 2 = ss, 211.75.30.99, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
 🇨🇳台湾 - CHT 3 = ss, 125.227.83.18, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
 🇨🇳台湾 - CHT 4 = ss, 118.163.177.119, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
-🇨🇳台湾 - CHT 5 = ss, 61.216.38.199, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
+🇨🇳上海台湾 1 = ss, 47.100.175.206, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
 🇯🇵日本 - AZURE 1 = ss, 104.46.219.106, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
 🇯🇵日本 - AZURE 2 = ss, 13.78.10.155, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
 🇯🇵日本 - BBTEC 1 = ss, 103.125.250.112, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
