--- a/lhie1.conf
+++ b/lhie1.conf
@@ -2,7 +2,7 @@
 loglevel = notify
 skip-proxy = 127.0.0.1,192.168.0.0/16,10.0.0.0/8,172.16.0.0/12,100.64.0.0/10,17.0.0.0/8,localhost,*.local,*.crashlytics.com
 bypass-system = true
-dns-server = 119.29.29.29, 223.5.5.5, 114.114.115.115, system
+dns-server = 119.29.29.29, 223.5.5.5, 114.114.115.115
 allow-wifi-access = false
 collapse-policy-group-items = true
 enhanced-mode-by-rule = true
