--- a/lhie1.conf
+++ b/lhie1.conf
@@ -17,9 +17,6 @@ proxy-test-url = http://www.qualcomm.cn/generate_204
 日本软银-3 = ss, jp.002.idcf.bilibili.center, 11173, encrypt-method=chacha20, password=qv4aZtT608, udp-relay=true
 🇯🇵上海日本IPLC 1 = ss, hr01.bilibilivpn.com, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
 🇭🇰中国深圳 -> 香港 1 | IPLC = ss, 120.79.73.29, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
-🇭🇰中国深圳 -> 香港 2 | IPLC = ss, 120.79.68.85, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
-🇭🇰中国深圳 -> 香港 3 | IPLC = ss, 120.78.168.63, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
-🇭🇰中国深圳 -> 香港 4 | IPLC = ss, 120.79.75.225, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
 🇭🇰中国深圳 -> 香港 5 | IPLC = ss, 39.108.191.24, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
 🇲🇴澳门CTM 2 = ss, ctm2.0tk8a3a1q4t94dler.com, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
 🇲🇴深圳澳门 3 = ss, 47.99.140.189, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
@@ -27,48 +24,27 @@ proxy-test-url = http://www.qualcomm.cn/generate_204
 🇲🇴上海澳门 4 = ss, 120.77.207.169, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
 🇰🇷韩国SK 1 = ss, 27.102.106.135, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
 🇰🇷韩国SK 2 = ss, 27.102.118.46, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
-🇨🇳台湾 - CHT 1 = ss, 61.219.127.215, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
-🇨🇳台湾 - CHT 2 = ss, 211.75.30.99, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
-🇨🇳台湾 - CHT 3 = ss, 125.227.83.18, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
-🇨🇳台湾 - CHT 4 = ss, 118.163.177.119, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
 🇨🇳上海台湾 1 = ss, 47.100.175.206, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
 🇯🇵日本 - AZURE 1 = ss, 104.46.219.106, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
 🇯🇵日本 - AZURE 2 = ss, 13.78.10.155, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
 🇯🇵日本 - BBTEC 1 = ss, 103.125.250.112, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
 🇯🇵日本 - BBTEC 2 = ss, 103.121.209.148, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
-🇭🇰香港 - AZURE 1 = ss, 23.98.36.121, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
 🇭🇰香港 - AZURE 2 = ss, 52.175.79.144, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
-🇭🇰香港 - AZURE 3 = ss, 13.70.23.41, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
-🇭🇰香港 - AZURE 4 = ss, 137.116.161.127, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
 🇭🇰香港 - AZURE 5 = ss, 168.63.201.248, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
 🇭🇰香港 - AZURE 6 = ss, 52.184.103.104, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
 🇭🇰香港 - AZURE 7 = ss, 52.229.173.156, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
-🇭🇰香港 - AZURE 8 = ss, 23.100.94.190, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
-🇭🇰香港 - GIA CN2 1 = ss, alihk1.0tk8a3a1q4t94dler.com, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
-🇭🇰香港 - GIA CN2 2 = ss, 159.138.34.239, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
-🇭🇰香港 - GIA CN2 3 = ss, 159.138.21.74, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
-🇭🇰香港 - GIA CN2 4 = ss, 159.138.33.163, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
-🇭🇰香港 - GIA CN2 5 = ss, 159.138.22.34, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
-🇭🇰香港 - GIA CN2 6 = ss, 159.138.59.174, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
-🇭🇰香港 - GIA CN2 7 = ss, 159.138.34.51, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
-🇭🇰香港 - GIA CN2 8 = ss, 159.138.62.211, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
-🇭🇰香港 - GIA CN2 9 = ss, 159.138.47.75, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
-
+🇭🇰香港GIA 9 = ss, 159.138.47.75, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
 
 [Proxy Group]
-Proxy = select, 日本软银-1, 🇲🇴杭州澳门 1, 🇰🇷上海韩国 2, 🇲🇴上海澳门 3, 🇰🇷韩国SK 1, 🇯🇵上海日本IPLC 1
+Proxy = select, 日本软银-1, 🇲🇴澳门CTM 2, 🇰🇷上海韩国 2, 🇲🇴上海澳门 4, 🇰🇷韩国SK 1, 🇭🇰香港GIA 9
 油管 = select, 日本软银-1, 🇰🇷韩国SK 1
-tw = select, 日本软银-1
-game = select, DIRECT
-# 去广告以及隐私追踪保
-Advertising = select,REJECT
-# 反运营商及臭名昭著的应用劫持
-Hijacking = select,REJECT
-# Apple
-🍎 = select,DIRECT, Proxy
+tw = select, 日本软银-1, 🇨🇳上海台湾 1
+game = select, DIRECT, 🇰🇷韩国SK 1
+Advertising = select, REJECT
+Hijacking = select, REJECT
+🍎 = select, DIRECT, Proxy
 
 [Rule]
-
 # SYSTEM直连规则
 RULE-SET,SYSTEM,DIRECT
 # Apple直连规则
@@ -76,14 +52,11 @@ RULE-SET,https://raw.githubusercontent.com/olocn/rule/master/apple.list,🍎
 DOMAIN-SUFFIX,apple.co,DIRECT
 DOMAIN-SUFFIX,apple.com,DIRECT
 DOMAIN-SUFFIX,crashlytics.com,DIRECT
-
-
 # ME
 RULE-SET,https://raw.githubusercontent.com/olocn/rule/master/reject.list,Advertising
 RULE-SET,https://raw.githubusercontent.com/olocn/rule/master/proxy.list,Proxy
 RULE-SET,https://raw.githubusercontent.com/olocn/rule/master/direct.list,DIRECT
 RULE-SET,https://raw.githubusercontent.com/olocn/rule/master/game.list,game
-
 # Advertising Block 去广告以及隐私追踪保护
 # > Exclusions
 DOMAIN,analytics.google.com,Proxy
@@ -92,14 +65,8 @@ DOMAIN,analyticsreporting.googleapis.com,Proxy
 DOMAIN,api.dizhensubao.igexin.com,DIRECT
 DOMAIN-SUFFIX,vd.l.qq.com,DIRECT
 RULE-SET,https://raw.githubusercontent.com/ConnersHua/Profiles/master/Surge/Ruleset/Advertising.list,Advertising
-
 # Hijacking Protection 反运营商及臭名昭著的应用劫持保护
 RULE-SET,https://raw.githubusercontent.com/ConnersHua/Profiles/master/Surge/Ruleset/Hijacking.list,Hijacking
-
-
-
-
-
 # ForeignMedia 媒体应用
 # > Youtube
 USER-AGENT,com.google.ios.youtube*,油管
@@ -108,21 +75,15 @@ USER-AGENT,YouTubeMusic*,油管
 DOMAIN-SUFFIX,googlevideo.com,油管
 DOMAIN-SUFFIX,youtube.com,油管
 DOMAIN,youtubei.googleapis.com,油管
-
 # > (TW)
 # > Bahamut
 USER-AGENT,Anime*,tw
 DOMAIN-SUFFIX,bahamut.com.tw,tw
 DOMAIN-SUFFIX,gamer.com.tw,tw
 DOMAIN-SUFFIX,hinet.net,tw
-
 # Global 全球加速规则
 RULE-SET,https://raw.githubusercontent.com/ConnersHua/Profiles/master/Surge/Ruleset/Global.list,Proxy
 RULE-SET,https://raw.githubusercontent.com/ConnersHua/Profiles/master/Surge/Ruleset/Telegram.list,Proxy
-
-
-
-
 # Local Area Network
 RULE-SET,LAN,DIRECT
 // Accelerate direct sites
@@ -133,12 +94,6 @@ FINAL,Proxy,dns-failed
 [Host]
 *.taobao.com = server:223.5.5.5
 *.tmall.com = server:223.5.5.5
-
-
-[Header Rewrite]
-^https?://www\.zhihu\.com header-replace User-Agent Mozilla/5.0 (Macintosh; Intel Mac OS X 10_13_6) AppleWebKit/605.1.15 (KHTML, like Gecko) Version/12.0.2 Safari/605.1.15
-^https?://zhidao\.baidu\.com header-replace User-Agent Mozilla/5.0 (Macintosh; Intel Mac OS X 10_13_6) AppleWebKit/605.1.15 (KHTML, like Gecko) Version/12.0.2 Safari/605.1.15
-
 
 [URL Rewrite]
 ^https?://(www.)?g.cn https://www.google.com.tw 302
