--- a/lhie1.conf
+++ b/lhie1.conf
@@ -34,6 +34,7 @@ proxy-test-url = http://www.qualcomm.cn/generate_204
 🇭🇰香港 - AZURE 6 = ss, 52.184.103.104, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
 🇭🇰香港 - AZURE 7 = ss, 52.229.173.156, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
 🇭🇰香港GIA 9 = ss, 159.138.47.75, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
+🇭🇰香港GIA 1 = ss, 193.110.202.198, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
 
 [Proxy Group]
 Proxy = select, 日本软银-1, 🇲🇴澳门CTM 2, 🇰🇷上海韩国 2, 🇲🇴上海澳门 4, 🇰🇷韩国SK 1, 🇭🇰香港GIA 9
