--- a/lhie1.conf
+++ b/lhie1.conf
@@ -18,7 +18,7 @@ proxy-test-url = http://www.qualcomm.cn/generate_204
 🇯🇵上海日本IPLC 1 = ss, hr01.bilibilivpn.com, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
 🇭🇰中国深圳 -> 香港 1 | IPLC = ss, 120.79.73.29, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
 🇭🇰中国深圳 -> 香港 5 | IPLC = ss, 39.108.191.24, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
-🇲🇴澳门CTM 2 = ss, ctm2.0tk8a3a1q4t94dler.com, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
+🇲🇴澳门CTM 2 = ss, 122.100.173.150, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
 🇲🇴深圳澳门 3 = ss, 47.99.140.189, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
 🇰🇷上海韩国 2 = ss, 47.100.193.49, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
 🇲🇴上海澳门 4 = ss, 120.77.207.169, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
