--- a/lhie1.conf
+++ b/lhie1.conf
@@ -15,7 +15,7 @@ proxy-test-url = http://www.qualcomm.cn/generate_204
 [Proxy]
 日本软银-1 = ss, jp.002.idcf.bilibili.center, 11173, encrypt-method=chacha20, password=qv4aZtT608, udp-relay=true
 日本软银-3 = ss, jp.002.idcf.bilibili.center, 11173, encrypt-method=chacha20, password=qv4aZtT608, udp-relay=true
-🇯🇵上海日本IPLC 1 = ss, hr01.bilibilivpn.com, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
+🇯🇵上海日本IPLC 1 = ss, 139.196.159.237, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
 🇭🇰中国深圳 -> 香港 1 | IPLC = ss, 120.79.73.29, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
 🇭🇰中国深圳 -> 香港 5 | IPLC = ss, 39.108.191.24, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
 🇲🇴澳门CTM 2 = ss, 122.100.173.150, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
