--- a/lhie1.conf
+++ b/lhie1.conf
@@ -19,7 +19,7 @@ proxy-test-url = http://www.qualcomm.cn/generate_204
 🇭🇰中国深圳 -> 香港 1 | IPLC = ss, 120.79.73.29, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
 🇭🇰中国深圳 -> 香港 5 | IPLC = ss, 39.108.191.24, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
 🇲🇴澳门CTM 2 = ss, 122.100.173.150, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
-🇲🇴深圳澳门 3 = ss, 47.99.140.189, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
+🇲🇴杭州澳门 = ss, 47.99.140.189, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
 🇰🇷上海韩国 2 = ss, 47.100.193.49, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
 🇲🇴上海澳门 4 = ss, 120.77.207.169, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
 🇰🇷韩国SK 1 = ss, 27.102.106.135, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
