--- a/lhie1.conf
+++ b/lhie1.conf
@@ -15,31 +15,28 @@ proxy-test-url = http://www.qualcomm.cn/generate_204
 [Proxy]
 日本软银-1 = ss, jp.002.idcf.bilibili.center, 11173, encrypt-method=chacha20, password=ss745201, udp-relay=true
 日本软银-3 = ss, jp.002.idcf.bilibili.center, 11173, encrypt-method=chacha20, password=ss745201, udp-relay=true
-🇯🇵上海日本IPLC 1 = ss, 139.196.159.237, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
-🇭🇰中国深圳 -> 香港 1 | IPLC = ss, 120.79.73.29, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
-🇭🇰中国深圳 -> 香港 5 | IPLC = ss, 39.108.191.24, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
-🇲🇴澳门CTM 2 = ss, 122.100.173.150, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
-🇲🇴杭州澳门 = ss, 47.99.140.189, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
-🇰🇷上海韩国 2 = ss, 47.100.193.49, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
-🇲🇴上海澳门 4 = ss, 120.77.207.169, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
-🇰🇷韩国SK 1 = ss, 27.102.106.135, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
-🇰🇷韩国SK 2 = ss, 27.102.118.46, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
-🇨🇳上海台湾 1 = ss, 47.100.175.206, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
-🇯🇵日本 - AZURE 1 = ss, 104.46.219.106, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
-🇯🇵日本 - AZURE 2 = ss, 13.78.10.155, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
-🇯🇵日本 - BBTEC 1 = ss, 103.125.250.112, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
-🇯🇵日本 - BBTEC 2 = ss, 103.121.209.148, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
-🇭🇰香港 - AZURE 2 = ss, 52.175.79.144, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
-🇭🇰香港 - AZURE 5 = ss, 168.63.201.248, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
-🇭🇰香港 - AZURE 6 = ss, 52.184.103.104, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
-🇭🇰香港 - AZURE 7 = ss, 52.229.173.156, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
-🇭🇰香港GIA 1 = ss, 193.110.202.198, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
+🇯🇵ALI = ss, 47.245.5.195, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
+🇭🇰IPLC1 = ss, 120.79.73.29, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
+🇭🇰IPLC5 = ss, 39.108.191.24, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
+🇲🇴CTM2 = ss, 122.100.173.150, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
+🇲🇴杭州 = ss, 47.99.140.189, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
+🇰🇷上海2 = ss, 47.100.193.49, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
+🇲🇴上海4 = ss, 120.77.207.169, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
+🇰🇷SK1 = ss, 27.102.106.135, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
+🇨🇳台湾1 = ss, 47.100.175.206, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
+🇯🇵AZURE1 = ss, 104.46.219.106, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
+🇯🇵BBTEC1 = ss, 103.125.250.112, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
+🇭🇰AZURE2 = ss, 52.175.79.144, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
+🇭🇰AZURE5 = ss, 168.63.201.248, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
+🇭🇰AZURE6 = ss, 52.184.103.104, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
+🇭🇰AZURE7 = ss, 52.229.173.156, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
+🇭🇰GIA1 = ss, 193.110.202.198, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
 
 [Proxy Group]
-Proxy = select, 日本软银-1, 🇲🇴澳门CTM 2, 🇰🇷上海韩国 2, 🇲🇴上海澳门 4, 🇰🇷韩国SK 1, 🇭🇰香港GIA 9
-油管 = select, 日本软银-1, 🇰🇷韩国SK 1
-tw = select, 日本软银-1, 🇨🇳上海台湾 1
-game = select, DIRECT, 🇰🇷韩国SK 1
+Proxy = select, 日本软银-1, 🇲🇴CTM2, 🇲🇴上海4, 🇭🇰AZURE7, 🇰🇷SK1, 🇯🇵ALI, 🇭🇰IPLC1
+油管 = select, Proxy, 日本软银-1, 🇰🇷SK1
+tw = select, 日本软银-1, 🇨🇳台湾1
+game = select, DIRECT, Proxy, 🇰🇰🇷SK1, 🇲🇴杭州
 Advertising = select, REJECT
 Hijacking = select, REJECT
 🍎 = select, DIRECT, Proxy
