--- a/lhie1.conf
+++ b/lhie1.conf
@@ -36,7 +36,7 @@ proxy-test-url = http://www.qualcomm.cn/generate_204
 Proxy = select, 日本软银-1, 🇲🇴CTM2, 🇲🇴上海4, 🇭🇰AZURE7, 🇰🇷SK1, 🇯🇵ALI, 🇭🇰IPLC1
 油管 = select, Proxy, 日本软银-1, 🇰🇷SK1
 tw = select, 日本软银-1, 🇨🇳台湾1
-game = select, DIRECT, Proxy, 🇰🇰🇷SK1, 🇲🇴杭州
+game = select, DIRECT, Proxy, 🇰🇷SK1, 🇲🇴杭州
 Advertising = select, REJECT
 Hijacking = select, REJECT
 🍎 = select, DIRECT, Proxy
