--- a/lhie1.conf
+++ b/lhie1.conf
@@ -25,7 +25,7 @@ proxy-test-url = http://www.qualcomm.cn/generate_204
 🇰🇷SK1 = ss, 27.102.106.135, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
 🇨🇳台湾1 = ss, 47.100.175.206, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
 🇯🇵AZURE1 = ss, 104.46.219.106, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
-🇯🇵BBTEC1 = ss, 103.125.250.112, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
+🇯🇵NTT = ss, 140.227.212.242, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
 🇭🇰AZURE2 = ss, 52.175.79.144, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
 🇭🇰AZURE5 = ss, 168.63.201.248, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
 🇭🇰AZURE6 = ss, 52.184.103.104, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
