--- a/lhie1.conf
+++ b/lhie1.conf
@@ -15,7 +15,8 @@ proxy-test-url = http://www.qualcomm.cn/generate_204
 [Proxy]
 日本软银-1 = ss, jp.002.idcf.bilibili.center, 11173, encrypt-method=chacha20, password=ss745201, udp-relay=true
 日本软银-3 = ss, jp.002.idcf.bilibili.center, 11173, encrypt-method=chacha20, password=ss745201, udp-relay=true
-🇯🇵ALI = ss, 47.245.5.195, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
+🇯🇵ALI1 = ss, 47.245.5.195, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
+🇯🇵ALI2 = ss, 47.74.33.113, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
 🇭🇰IPLC1 = ss, 120.79.73.29, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
 🇭🇰IPLC5 = ss, 39.108.191.24, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
 🇲🇴CTM2 = ss, 122.100.173.150, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
