--- a/lhie1.conf
+++ b/lhie1.conf
@@ -34,7 +34,7 @@ proxy-test-url = http://www.qualcomm.cn/generate_204
 🇭🇰GIA1 = ss, 193.110.202.198, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
 
 [Proxy Group]
-Proxy = select, 日本软银-1, 🇲🇴CTM2, 🇲🇴上海4, 🇭🇰AZURE7, 🇰🇷SK1, 🇯🇵ALI, 🇭🇰IPLC1
+Proxy = select, 日本软银-1, 🇲🇴CTM2, 🇲🇴上海4, 🇭🇰AZURE7, 🇰🇷SK1, 🇯🇵ALI1, 🇭🇰IPLC1
 油管 = select, Proxy, 日本软银-1, 🇰🇷SK1
 tw = select, 日本软银-1, 🇨🇳台湾1
 game = select, DIRECT, Proxy, 🇰🇷SK1, 🇲🇴杭州
