--- a/lhie1.conf
+++ b/lhie1.conf
@@ -50,6 +50,13 @@ RULE-SET,https://raw.githubusercontent.com/olocn/rule/master/apple.list,🍎
 DOMAIN-SUFFIX,apple.co,DIRECT
 DOMAIN-SUFFIX,apple.com,DIRECT
 DOMAIN-SUFFIX,crashlytics.com,DIRECT
+//Siri
+USER-AGENT,*AssistantServices*,DIRECT
+USER-AGENT,MobileAsset*,DIRECT
+USER-AGENT,Siri*,DIRECT
+USER-AGENT,*siri*,DIRECT
+
+
 # ME
 RULE-SET,https://raw.githubusercontent.com/olocn/rule/master/reject.list,Advertising
 RULE-SET,https://raw.githubusercontent.com/olocn/rule/master/proxy.list,Proxy
