--- a/lhie1.conf
+++ b/lhie1.conf
@@ -2,7 +2,7 @@
 loglevel = notify
 skip-proxy = 127.0.0.1,192.168.0.0/16,10.0.0.0/8,172.16.0.0/12,100.64.0.0/10,17.0.0.0/8,localhost,*.local,*.crashlytics.com
 bypass-system = true
-dns-server = 119.29.29.29, 8.8.4.4, 114.114.115.115
+dns-server = 119.29.29.29, 114.114.115.115
 allow-wifi-access = false
 collapse-policy-group-items = true
 enhanced-mode-by-rule = true
@@ -15,29 +15,26 @@ proxy-test-url = http://www.qualcomm.cn/generate_204
 [Proxy]
 日本软银-1 = ss, jp.002.idcf.bilibili.center, 11173, encrypt-method=chacha20, password=ss745201, udp-relay=true
 日本软银-3 = ss, jp.002.idcf.bilibili.center, 11173, encrypt-method=chacha20, password=ss745201, udp-relay=true
-🇯🇵ALI1 = ss, 47.245.5.195, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
-🇯🇵ALI2 = ss, 47.74.33.113, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
-🇭🇰IPLC1 = ss, 120.79.73.29, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
-🇭🇰IPLC5 = ss, 39.108.191.24, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
-🇲🇴CTM2 = ss, 122.100.173.150, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
-🇲🇴杭州 = ss, 47.99.140.189, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
-🇰🇷上海2 = ss, 47.100.193.49, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
-🇲🇴上海4 = ss, 120.77.207.169, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
-🇰🇷SK1 = ss, 27.102.106.135, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
-🇨🇳台湾1 = ss, 47.100.175.206, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
-🇯🇵AZURE1 = ss, 104.46.219.106, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
-🇯🇵NTT = ss, 140.227.212.242, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
-🇭🇰AZURE2 = ss, 52.175.79.144, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
-🇭🇰AZURE5 = ss, 168.63.201.248, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
-🇭🇰AZURE6 = ss, 52.184.103.104, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
-🇭🇰AZURE7 = ss, 52.229.173.156, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
-🇭🇰GIA1 = ss, 193.110.202.198, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
+日本ALI1 = ss, 47.245.5.195, 37852, encrypt-method=xchacha20-ietf-poly1305, password=bpdftT, udp-relay=true
+日本ALI2 = ss, 47.74.33.113, 37852, encrypt-method=xchacha20-ietf-poly1305, password=bpdftT, udp-relay=true
+香港IPLC1 = ss, 120.79.73.29, 37852, encrypt-method=xchacha20-ietf-poly1305, password=bpdftT, udp-relay=true
+澳门CTM2 = ss, ctm4.0tk8a3a1q4t94dler.com, 37852, encrypt-method=xchacha20-ietf-poly1305, password=bpdftT, udp-relay=true
+杭州澳门 = ss, 47.99.140.189, 37852, encrypt-method=xchacha20-ietf-poly1305, password=bpdftT, udp-relay=true
+香港GIA = ss, alihk1.0tk8a3a1q4t94dler.com, 37852, encrypt-method=xchacha20-ietf-poly1305, password=bpdftT
+台湾1 = ss, 47.100.175.206, 37852, encrypt-method=xchacha20-ietf-poly1305, password=bpdftT, udp-relay=true
+上海日本 = ss, 40.73.112.74, 37852, encrypt-method=xchacha20-ietf-poly1305, password=bpdftT
+香港AZURE2 = ss, 52.175.79.144, 37852, encrypt-method=xchacha20-ietf-poly1305, password=bpdftT, udp-relay=true
+香港AZURE6 = ss, 52.184.103.104, 37852, encrypt-method=xchacha20-ietf-poly1305, password=bpdftT, udp-relay=true
+香港IPLC2 = ss, 120.79.68.85, 37852, encrypt-method=xchacha20-ietf-poly1305, password=bpdftT
+香港GT1 = ss, 193.110.202.198, 37852, encrypt-method=xchacha20-ietf-poly1305, password=bpdftT, udp-relay=true
+香港GT2 = ss, 193.110.201.134, 37852, encrypt-method=xchacha20-ietf-poly1305, password=bpdftT, udp-relay=true
+日本NTN = ss, 125.6.64.129, 37852, encrypt-method=xchacha20-ietf-poly1305, password=bpdftT
 
 [Proxy Group]
-Proxy = select, 日本软银-1, 🇲🇴CTM2, 🇲🇴上海4, 🇭🇰AZURE7, 🇰🇷SK1, 🇯🇵ALI1, 🇭🇰IPLC1
-油管 = select, Proxy, 日本软银-1, 🇰🇷SK1
-tw = select, 日本软银-1, 🇨🇳台湾1
-game = select, DIRECT, Proxy, 🇰🇷SK1, 🇲🇴杭州
+Proxy = select, 日本软银-1, 澳门CTM2, 杭州澳门, 香港AZURE6, 日本ALI1, 日本ALI2, 香港GT2, 香港IPLC2
+油管 = select, Proxy, 日本NTN, 日本ALI1, 日本ALI2, 日本软银-1, 上海日本
+tw = select, 日本软银-1, 台湾1
+game = select, DIRECT, Proxy, 香港AZURE6, 香港AZURE2, 香港GT1, 香港GT2, 杭州澳门
 Advertising = select, REJECT
 Hijacking = select, REJECT
 🍎 = select, DIRECT, Proxy
@@ -50,6 +47,7 @@ RULE-SET,https://raw.githubusercontent.com/olocn/rule/master/apple.list,🍎
 DOMAIN-SUFFIX,apple.co,DIRECT
 DOMAIN-SUFFIX,apple.com,DIRECT
 DOMAIN-SUFFIX,crashlytics.com,DIRECT
+
 //Siri
 USER-AGENT,*AssistantServices*,DIRECT
 USER-AGENT,MobileAsset*,DIRECT
@@ -62,6 +60,7 @@ RULE-SET,https://raw.githubusercontent.com/olocn/rule/master/reject.list,Adverti
 RULE-SET,https://raw.githubusercontent.com/olocn/rule/master/proxy.list,Proxy
 RULE-SET,https://raw.githubusercontent.com/olocn/rule/master/direct.list,DIRECT
 RULE-SET,https://raw.githubusercontent.com/olocn/rule/master/game.list,game
+
 # Advertising Block 去广告以及隐私追踪保护
 # > Exclusions
 DOMAIN,analytics.google.com,Proxy
@@ -72,6 +71,7 @@ DOMAIN-SUFFIX,vd.l.qq.com,DIRECT
 RULE-SET,https://raw.githubusercontent.com/ConnersHua/Profiles/master/Surge/Ruleset/Advertising.list,Advertising
 # Hijacking Protection 反运营商及臭名昭著的应用劫持保护
 RULE-SET,https://raw.githubusercontent.com/ConnersHua/Profiles/master/Surge/Ruleset/Hijacking.list,Hijacking
+
 # ForeignMedia 媒体应用
 # > Youtube
 USER-AGENT,com.google.ios.youtube*,油管
@@ -80,12 +80,14 @@ USER-AGENT,YouTubeMusic*,油管
 DOMAIN-SUFFIX,googlevideo.com,油管
 DOMAIN-SUFFIX,youtube.com,油管
 DOMAIN,youtubei.googleapis.com,油管
+
 # > (TW)
 # > Bahamut
 USER-AGENT,Anime*,tw
 DOMAIN-SUFFIX,bahamut.com.tw,tw
 DOMAIN-SUFFIX,gamer.com.tw,tw
 DOMAIN-SUFFIX,hinet.net,tw
+
 # Global 全球加速规则
 RULE-SET,https://raw.githubusercontent.com/ConnersHua/Profiles/master/Surge/Ruleset/Global.list,Proxy
 RULE-SET,https://raw.githubusercontent.com/ConnersHua/Profiles/master/Surge/Ruleset/Telegram.list,Proxy
@@ -97,6 +99,13 @@ GEOIP,CN,DIRECT
 FINAL,Proxy,dns-failed
 
 [Host]
+*.ali*.com = server:223.6.6.6
+*.upyun.com = server:223.6.6.6
+*.qq.com = server:119.29.29.29
+*.gtimg.com = server:119.29.29.29
+*.1688.com = server:223.6.6.6
+*.fliggy.com = server:223.6.6.6
+*.aliqin.com = server:223.6.6.6
 *.taobao.com = server:223.5.5.5
 *.tmall.com = server:223.5.5.5
 
