--- a/lhie1.conf
+++ b/lhie1.conf
@@ -15,20 +15,19 @@ proxy-test-url = http://www.qualcomm.cn/generate_204
 [Proxy]
 日本软银-1 = ss, jp.002.idcf.bilibili.center, 11173, encrypt-method=chacha20, password=ss745201, udp-relay=true
 日本软银-3 = ss, jp.002.idcf.bilibili.center, 11173, encrypt-method=chacha20, password=ss745201, udp-relay=true
+上海日本 = ss, 40.73.112.74, 37852, encrypt-method=xchacha20-ietf-poly1305, password=bpdftT, udp-relay=true
 日本ALI1 = ss, 47.245.5.195, 37852, encrypt-method=xchacha20-ietf-poly1305, password=bpdftT, udp-relay=true
 日本ALI2 = ss, 47.74.33.113, 37852, encrypt-method=xchacha20-ietf-poly1305, password=bpdftT, udp-relay=true
+日本NTN = ss, 125.6.64.129, 37852, encrypt-method=xchacha20-ietf-poly1305, password=bpdftT, udp-relay=true
 香港IPLC1 = ss, 120.79.73.29, 37852, encrypt-method=xchacha20-ietf-poly1305, password=bpdftT, udp-relay=true
 澳门CTM2 = ss, ctm4.0tk8a3a1q4t94dler.com, 37852, encrypt-method=xchacha20-ietf-poly1305, password=bpdftT, udp-relay=true
 杭州澳门 = ss, 47.99.140.189, 37852, encrypt-method=xchacha20-ietf-poly1305, password=bpdftT, udp-relay=true
-香港GIA = ss, alihk1.0tk8a3a1q4t94dler.com, 37852, encrypt-method=xchacha20-ietf-poly1305, password=bpdftT
 台湾1 = ss, 47.100.175.206, 37852, encrypt-method=xchacha20-ietf-poly1305, password=bpdftT, udp-relay=true
-上海日本 = ss, 40.73.112.74, 37852, encrypt-method=xchacha20-ietf-poly1305, password=bpdftT
 香港AZURE2 = ss, 52.175.79.144, 37852, encrypt-method=xchacha20-ietf-poly1305, password=bpdftT, udp-relay=true
 香港AZURE6 = ss, 52.184.103.104, 37852, encrypt-method=xchacha20-ietf-poly1305, password=bpdftT, udp-relay=true
-香港IPLC2 = ss, 120.79.68.85, 37852, encrypt-method=xchacha20-ietf-poly1305, password=bpdftT
+香港IPLC2 = ss, 120.79.68.85, 37852, encrypt-method=xchacha20-ietf-poly1305, password=bpdftT, udp-relay=true
 香港GT1 = ss, 193.110.202.198, 37852, encrypt-method=xchacha20-ietf-poly1305, password=bpdftT, udp-relay=true
 香港GT2 = ss, 193.110.201.134, 37852, encrypt-method=xchacha20-ietf-poly1305, password=bpdftT, udp-relay=true
-日本NTN = ss, 125.6.64.129, 37852, encrypt-method=xchacha20-ietf-poly1305, password=bpdftT
 
 [Proxy Group]
 Proxy = select, 日本软银-1, 澳门CTM2, 杭州澳门, 香港AZURE6, 日本ALI1, 日本ALI2, 香港GT2, 香港IPLC2
