--- a/lhie1.conf
+++ b/lhie1.conf
@@ -14,28 +14,23 @@ proxy-test-url = http://www.qualcomm.cn/generate_204
 
 [Proxy]
 日本软银-1 = ss, jp.002.idcf.bilibili.center, 11173, encrypt-method=chacha20, password=ss745201, udp-relay=true
-日本软银-3 = ss, jp.002.idcf.bilibili.center, 11173, encrypt-method=chacha20, password=ss745201, udp-relay=true
-上海日本 = ss, 40.73.112.74, 37852, encrypt-method=xchacha20-ietf-poly1305, password=bpdftT, udp-relay=true
 日本ALI1 = ss, 47.245.5.195, 37852, encrypt-method=xchacha20-ietf-poly1305, password=bpdftT, udp-relay=true
 日本ALI2 = ss, 47.74.33.113, 37852, encrypt-method=xchacha20-ietf-poly1305, password=bpdftT, udp-relay=true
-日本NTN = ss, 125.6.64.129, 37852, encrypt-method=xchacha20-ietf-poly1305, password=bpdftT, udp-relay=true
 香港IPLC1 = ss, 120.79.73.29, 37852, encrypt-method=xchacha20-ietf-poly1305, password=bpdftT, udp-relay=true
-澳门CTM2 = ss, ctm4.0tk8a3a1q4t94dler.com, 37852, encrypt-method=xchacha20-ietf-poly1305, password=bpdftT, udp-relay=true
-杭州澳门 = ss, 47.99.140.189, 37852, encrypt-method=xchacha20-ietf-poly1305, password=bpdftT, udp-relay=true
+澳门CTM6 = ss, ctm6.0tk8a3a1q4t94dler.com, 37852, encrypt-method=xchacha20-ietf-poly1305, password=bpdftT, udp-relay=true
+杭州AZ = ss, 47.99.140.189, 37852, encrypt-method=xchacha20-ietf-poly1305, password=bpdftT, udp-relay=true
 台湾1 = ss, 47.100.175.206, 37852, encrypt-method=xchacha20-ietf-poly1305, password=bpdftT, udp-relay=true
 香港AZURE2 = ss, 52.175.79.144, 37852, encrypt-method=xchacha20-ietf-poly1305, password=bpdftT, udp-relay=true
 香港AZURE6 = ss, 52.184.103.104, 37852, encrypt-method=xchacha20-ietf-poly1305, password=bpdftT, udp-relay=true
-香港IPLC2 = ss, 120.79.68.85, 37852, encrypt-method=xchacha20-ietf-poly1305, password=bpdftT, udp-relay=true
 香港GT1 = ss, 193.110.202.198, 37852, encrypt-method=xchacha20-ietf-poly1305, password=bpdftT, udp-relay=true
 香港GT2 = ss, 193.110.201.134, 37852, encrypt-method=xchacha20-ietf-poly1305, password=bpdftT, udp-relay=true
 
 [Proxy Group]
-Proxy = select, 日本软银-1, 澳门CTM2, 杭州澳门, 香港AZURE6, 日本ALI1, 日本ALI2, 香港GT2, 香港IPLC2
-油管 = select, Proxy, 日本NTN, 日本ALI1, 日本ALI2, 日本软银-1, 上海日本
+Proxy = select, 日本软银-1, 澳门CTM2, 杭州AZ, 香港AZURE6, 日本ALI1, 日本ALI2, 香港GT2
+油管 = select, Proxy, 日本ALI1, 日本ALI2, 日本软银-1
 tw = select, 日本软银-1, 台湾1
-game = select, DIRECT, Proxy, 香港AZURE6, 香港AZURE2, 香港GT1, 香港GT2, 杭州澳门
+game = select, DIRECT, Proxy, 香港AZURE2, 香港GT1, 香港GT2, 杭州AZ, 澳门CTM6
 Advertising = select, REJECT
-Hijacking = select, REJECT
 🍎 = select, DIRECT, Proxy
 
 [Rule]
@@ -68,8 +63,6 @@ DOMAIN,analyticsreporting.googleapis.com,Proxy
 DOMAIN,api.dizhensubao.igexin.com,DIRECT
 DOMAIN-SUFFIX,vd.l.qq.com,DIRECT
 RULE-SET,https://raw.githubusercontent.com/ConnersHua/Profiles/master/Surge/Ruleset/Advertising.list,Advertising
-# Hijacking Protection 反运营商及臭名昭著的应用劫持保护
-RULE-SET,https://raw.githubusercontent.com/ConnersHua/Profiles/master/Surge/Ruleset/Hijacking.list,Hijacking
 
 # ForeignMedia 媒体应用
 # > Youtube
@@ -98,15 +91,6 @@ GEOIP,CN,DIRECT
 FINAL,Proxy,dns-failed
 
 [Host]
-*.ali*.com = server:223.6.6.6
-*.upyun.com = server:223.6.6.6
-*.qq.com = server:119.29.29.29
-*.gtimg.com = server:119.29.29.29
-*.1688.com = server:223.6.6.6
-*.fliggy.com = server:223.6.6.6
-*.aliqin.com = server:223.6.6.6
-*.taobao.com = server:223.5.5.5
-*.tmall.com = server:223.5.5.5
 
 [URL Rewrite]
 ^https?://(www.)?g.cn https://www.google.com.tw 302
