--- a/lhie1.conf
+++ b/lhie1.conf
@@ -48,6 +48,7 @@ USER-AGENT,MobileAsset*,DIRECT
 USER-AGENT,Siri*,DIRECT
 USER-AGENT,*siri*,DIRECT
 
+DOMAIN,log.nuomi.com,REJECT-TINYGIF
 
 # ME
 RULE-SET,https://raw.githubusercontent.com/olocn/rule/master/reject.list,Advertising
