--- a/QuantumultX.conf
+++ b/QuantumultX.conf
@@ -45,23 +45,45 @@ DOMAIN-SUFFIX,vd.l.qq.com,DIRECT
 DOMAIN-SUFFIX,goodreads.com,PROXY,force-remote-dns
 
 //me
+DOMAIN,gsp0.baidu.com,REJECT
+DOMAIN,caclick.baidu.com,REJECT
+DOMAIN,publish-pic-cpu.baidu.com,REJECT
+DOMAIN-SUFFIX,sofire.baidu.com,REJECT
+DOMAIN-SUFFIX,baifubao.com,REJECT
+DOMAIN,biaozhu.baidu.com,REJECT
+DOMAIN,hm.baidu.com,REJECT
+DOMAIN-SUFFIX,pingma.qq.com,REJECT
+DOMAIN,loc.map.baidu.com,REJECT
+DOMAIN,nsclick.baidu.com,REJECT
+DOMAIN,hmma.baidu.com,REJECT
+DOMAIN-SUFFIX,nuomi.com,REJECT
+
+DOMAIN,logs.amap.com,REJECT
+DOMAIN,stats.jpush.cn,REJECT
+DOMAIN,wx.hfxing.cn,REJECT
+DOMAIN,restapi.amap.com,REJECT
+DOMAIN,ali-stats.jpush.cn,REJECT
+DOMAIN,experiment.appadhoc.com,REJECT
+DOMAIN-SUFFIX,mob.com,REJECT
+
+# > KFC
+DOMAIN,tracker.appadhoc.com,REJECT
+DOMAIN,fp.hwwt8.com,REJECT
+DOMAIN,trackingprd.hwwt8.com,REJECT
+
 DOMAIN-SUFFIX,umengcloud.com,REJECT
 DOMAIN-SUFFIX,appbaqend.com,REJECT
 DOMAIN-SUFFIX,data.flurry.com,REJECT
 DOMAIN-SUFFIX,qchannel01.cn,REJECT
 DOMAIN,g-assets.daily.taobao.net,REJECT
 
-DOMAIN-SUFFIX,nuomi.com,REJECT
-
-//高德
+# > 高德
 DOMAIN,aoscdn.amap.com,REJECT
 DOMAIN,page.amap.com,REJECT
 DOMAIN,sync.amap.com,REJECT
-DOMAIN,mps.amap.com,REJECT
 DOMAIN,aos-cdn-image.amap.com,REJECT
 DOMAIN,wb.amap.com,REJECT
 DOMAIN,f.amap.com,REJECT
-
 DOMAIN-SUFFIX,ac.mmstat.com,REJECT
 DOMAIN-SUFFIX,go.mmstat.com,REJECT
 DOMAIN-SUFFIX,gxb.mmstat.com,REJECT
@@ -70,9 +92,9 @@ DOMAIN-SUFFIX,p3p.mmstat.com,REJECT
 DOMAIN-SUFFIX,res.mmstat.com,REJECT
 DOMAIN-SUFFIX,yt.mmstat.com,REJECT
 DOMAIN-SUFFIX,wgo.mmstat.com,REJECT
-
 DOMAIN-SUFFIX,hockeyapp.net,REJECT
 DOMAIN,fuwu.wap.sogou.com,REJECT
+
 DOMAIN-SUFFIX,appodeal.com,REJECT
 DOMAIN-SUFFIX,applvn.com,REJECT
 DOMAIN,x.appbaqend.com,REJECT
@@ -82,7 +104,7 @@ DOMAIN,union.uc.cn,REJECT
 DOMAIN-SUFFIX,tlnk.io,REJECT
 DOMAIN-SUFFIX,alexametrics.com,REJECT
 
-//WPS
+# > WPS
 DOMAIN,ad-stat.ksosoft.com,REJECT
 DOMAIN-SUFFIX,kingsoft-office-service.com,REJECT
 USER-AGENT,wpsoffice*,REJECT
